--- a/assets/styles/layout/footer.css
+++ b/assets/styles/layout/footer.css
@@ -54,8 +54,7 @@ footer {
         }
 
         .footer__links {
-            width: 830px;
-            padding-right: 80px;
+            width: 60%;
             justify-content: space-between;
             display: flex;
             .footer__links-title {
